<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:padding="5dp" android:orientation="vertical" android:gravity="center">
    <ImageView android:id="@+id/imageView1" android:src="@drawable/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingBottom="20dp"></ImageView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/tAboutName"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:autoLink="web" android:text="@string/tAboutHttp"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:paddingTop="40dp" android:text="@string/tAboutCopyright"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:autoLink="email" android:text="@string/tAboutMail"></TextView>
</LinearLayout>
